[tool.poetry]
name = "cast_registry"
version = "0.1.0"
description = "Just to be able to register domains/podcasts.."
authors = ["Jochen Wersdörfer"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4"
django-htmx = "^1.8"
django-allauth = "^0.51"
django-environ = "^0.9"
httpx = "^0.23"
pydantic = "^1.9"
psycopg2 = "*"
gunicorn = "^20.1"
whitenoise = "^6.2"
django-anymail = {extras = ["mailgun"], version = "*"}

[tool.poetry.dev-dependencies]
black = "*"
jupyterlab = "^3"
django-extensions = "^3"
django-debug-toolbar = "^3"
pyproject-flake8 = "^0.0.1-alpha.4"
Faker = "*"
honcho = "*"
djhtml = "*"
nb-black = "*"
pytest = "*"
pytest-django = "*"
coverage = "*"
mypy = "*"
django-stubs = {extras = ["compatible-mypy"], version = "*"}
notebook = "*"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
statistics = "True"
ignore = ["D203" , "W503"]
max-line-length = 119
exclude = '''
    .git,
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/registry/tests/*", "apps/registry/migrations"]
command_line = "-m pytest"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
