[project]
name = "cast_registry"
description = "Deploy web applications for cast etc."
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
authors = ["Jochen Wersdörfer <jochen-registry@wersdoerfer.de>"]
dependencies = [
    "django-allauth>=65.0.2",
    "django-anymail[mailgun]>=12.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-htmx>=1.19.0",
    "django>=5.1.2",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "psycopg>=3.2.3",
    "pydantic>=2.9.2",
    "whitenoise>=6.7.0",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.flake8]
statistics = "True"
ignore = ["D203" , "W503"]
max-line-length = 119
exclude = '''
    .git,
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/registry/tests/*", "apps/registry/migrations/*"]
command_line = "-m pytest"

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
    "django-stubs>=5.1.0",
    "jupyterlab>=4.2.5",
    "mypy>=1.12.0",
    "notebook>=7.2.2",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "rich>=13.9.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.1",
    "typer>=0.12.5",
    "django-debug-toolbar>=4.4.6",
]
